[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["atsuki shirasawa <3out.change0.20@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fire = "^0.4.0"
Pillow = "^9.2.0"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.971"
pydocstyle = "^6.1.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
